# AI_-_Humanoid_Robotics_Textbook

./: .gitignore  GEMINI.md  deployment_for_github_desktop.md  deployment_from_local_terminal.md  deployment_instructions.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js  vercel.json
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
.gemini/: settings.json
.specify/memory/: constitution.md
backend/: .flake8  .gitignore  Makefile  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 9e1bbd0bfcde_initial_migration.py
backend/scripts/: embed.py
backend/src/: main.py
backend/src/api/: auth.py  history.py  query.py
backend/src/api/endpoints/: history.py  query.py
backend/src/core/: config.py  logging.py  security.py
backend/src/models/: __init__.py  conversation.py  message.py  retrieval_log.py  schemas.py  user.py
backend/src/services/: history_service.py  rag_service.py
backend/tests/: test_rag_service.py  test_security.py
docs/: intro.md
docs/appendices/: hardware-guide.md  weekly-roadmap.md
docs/capstone/: main.md
docs/foundations/: intro.md
docs/module1/: rclpy.md  ros2-actions.md  ros2-nodes.md  ros2-services.md  ros2-topics.md
docs/module2/: gazebo-simulation.md  unity-rendering.md  urdf-modeling.md
docs/module3/: isaac-ros.md  isaac-sim-basics.md  nav2-biped.md
docs/module4/: llm-planning.md  vla-pipelines.md  (+1 more)
frontend/: .eslintrc.js
src/: clientModules.js  config.js
(+80 files in other folders)
