[project]
name = "humanoid-robotics-backend"
version = "0.1.0"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.23.2",
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    "qdrant-client==1.6.0",
    "openai==1.3.7",
    "psycopg2-binary==2.9.9",
    "sqlalchemy==2.0.23",
    "alembic==1.12.0",
    "python-jose[cryptography]==3.3.0",
    "passlib==1.7.4",
    "bcrypt==3.2.0",
    "python-multipart==0.0.7",
    "langchain==0.0.350",
    "tiktoken==0.5.2",
    "pytest==7.4.3",
    "httpx==0.25.1",
]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''
